--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ exclude = [
     ".tox",
     ".venv",
     ".vscode",
-    # "__pypackages__",
+    "__pypackages__",
     "_build",
     "buck-out",
     "build",
@@ -39,4 +39,5 @@ exclude = [
     "node_modules",
     "site-packages",
     "venv",
+    "__init__.py"
 ]
